--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ font-family: 'Poppins', sans-serif;
 7.  Experience
 8.  Profiles
 9.  Portfolio
-10. Clients
-11. Contact
+10. Publication
+11. Clients
+12. Contact
 
 /*-------------------------------------
 		1.General css (Reset code)
@@ -714,7 +715,34 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 
 /*-------------------------------------
-        10. Clients
+        10.  Publication
+--------------------------------------*/
+.publication {padding: 50px 0 50px;}
+.publication-content {padding-top: 30px;}
+/*.single-about-txt*/
+.single-about-txt2 h3 {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-size:18px;
+    color: #3c4258;
+    text-transform: initial;
+    line-height: 1.2;
+}
+.single-about-txt2 p {
+    font-size: 16px;
+    color: #999fb3;
+    padding: 0 0 5px;
+    /*border-bottom: 1px solid #999fb3;*/
+}
+.single-about-txt2 a{
+    color: #51d2ff;
+}
+
+
+
+
+/*-------------------------------------
+        11. Clients
 --------------------------------------*/
 .clients {padding-top: 50px;}
 .clients-area {
@@ -732,7 +760,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 
 /*-------------------------------------
-        11. Contact
+        12. Contact
 --------------------------------------*/
 .contact {
     background: #f9fbfd;
