--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,8 +2,9 @@
 
 }/*max-width:1680px*/
 @media screen and (max-width:1440px){
-	.single-about-img img {max-width:100%;}
-	.single-about-img:before,.about-list-icon{width: 100%;}
+	.col-sm-offset-1 {max-width: 400px;}
+	.single-about-img img {max-width: 400px;}
+	.single-about-img:before,.about-list-icon{max-width: 400px;}
 }/*max-width:1440px*/
 
 @media screen and (max-width:1199px){
@@ -12,6 +13,7 @@
 	.welcome-hero {height: 768px;}
 
 	.timeline-content span>i, .experience-time span>i {left: -15.5%;}
+	
 }/*max-width:1199px*/
 
 @media screen and (max-width:1024px){
@@ -23,6 +25,7 @@
 	nav.navbar.bootsnav ul.nav > li.dropdown span.megamenu-title  {display:block;color: #43465d;font-size: 18px;}
 	nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li .megamenu-sub-title a {margin-top: 20px;font-size: 14px;}
 	nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li .megamenu-sub-txt a{margin-bottom: 15px;}
+
 }/*max-width:1008px*/
 
 @media screen and (max-width:992px){
@@ -41,6 +44,8 @@
 	.main-timeline:before {left:0.4%;}
 
 	.single-horizontal-timeline .experience-time,.single-horizontal-timeline .timeline-content {margin: 0;}
+
+	
 }/*max-width:991px*/
 
 @media screen and (max-width:768px){
@@ -48,11 +53,12 @@
 }/*max-width:768px*/
 
 @media screen and (max-width:767px){
-	.single-about-img {max-width: 450px;}
+	.single-about-img {max-width: 400px;}
 	.experience-time span>i,.timeline-content span>i,.main-timeline:before {display: none;}
 	.experience-time, .timeline-content {margin-left: 0;}
 
 	.isotope .item {max-width: 350px;margin: 0 auto 30px;}
+	
 
 	.single-profile {max-width: 350px; margin: 30px auto;border: 0;}
 	.profile-border{border: 0;}
