--- a/css/style.css
+++ b/css/style.css
@@ -347,12 +347,12 @@ nav.navbar.bootsnav .navbar-toggle i{color: #51d2ff;}
 }
 
 /*.education-horizontal-timeline*/
-.education-horizontal-timeline .col-sm-4 {padding:0 2px; width: 350px;}
+.education-horizontal-timeline .col-sm-4 {padding:0 2px; width: 348px;}
 
 .single-horizontal-timeline .experience-time h3{text-transform: capitalize; font-size: 16px;}
 .single-horizontal-timeline .experience-time h3 span{text-transform:lowercase; font-size: 15px;}
 .single-horizontal-timeline .timeline-content h5 {margin: 15px 0;}
-.single-horizontal-timeline p {color: #999fb3;max-width: 335px;}
+.single-horizontal-timeline p {color: #999fb3;max-width: 320px;}
 
 /*.timeline-horizontal-border*/
 .timeline-horizontal-border {
@@ -369,10 +369,10 @@ span.single-timeline-horizontal {
     display:  inline-block;
     background: #b2c1ce;
     height:  1px;
-    width: 400px;
+    width: 315px;
 }
-span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
-/*.timeline-horizontal-border*/
+/*span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
+.timeline-horizontal-border*/
 
 /*.education-horizontal-timeline*/
 
@@ -605,16 +605,59 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
         9. Portfolio
 --------------------------------------*/
 .portfolio {
-    padding:  50px 0 100px;
+    padding:  50px 20px 100px;
     border:  1px solid #e5ebf2;
+    /*text-align: center;*/
 }
 
-.portfolio-content {padding-top: 50px;}
+.portfolio-content {
+    text-align: center;
+    padding-top: 50px;
+    /*padding-left: 30px;*/
+}
 
 .portfolio-content .row h3{
     padding-bottom: 30px;
     font-size: 20px; 
 }
+
+/* ---- .tab ---- */
+.tab{
+    overflow: hidden;
+    border: none;
+    text-align: center;
+    background-color: #f1f1f1;
+}
+
+.tab button{
+    background-color: inherit;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding: 3px 10px 3px 10px;
+    transition: 0.3s;
+    color: #51d2ff;
+}
+
+.tab button:hover{
+    background-color: #ddd;
+    color: #16c3ff;
+}
+
+.tab button.active {
+  background-color: #ccc;
+  color: #16c3ff;
+}
+
+.tabcontent{
+    display: none;
+
+}
+
+#uiux{
+    display: block;
+}
+
 
 /* ---- .item ---- */
 .isotope:after {
@@ -623,9 +666,11 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     clear: both;
 }
 .isotope .item {
+
     position:relative;
     overflow:hidden;
     margin-bottom: 30px;
+
 }
 /*.item img*/
 .isotope .item img{
@@ -647,9 +692,10 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 
 /*.isotope-overlay*/
 .isotope-overlay{
+
     position:absolute;
     height:200px;
-    width:250px;
+    width:300px;
     background:rgba(31,44,108,.5);
     display:flex;
     align-items:center;
