redesign the index.html of UI/UX portfolio / add lots of description and connect to different webpage

--- a/css/style.css
+++ b/css/style.css
@@ -690,13 +690,52 @@ span.single-timeline-horizontal {
     transform:scale(1.5);
 }/*.item img*/
 
+.item a{
+    margin: 10px 20px;
+    /*margin-top: 50px;
+    
+    border: 1px solid white;*/
+}
+
+.item h4{
+    margin-left: 3px;
+    color: #e6e3e3;
+    text-align: left;
+    font-weight: 400;
+    /*margin-top: -50px;*/
+    
+    /*border: 1px solid white;*/
+}
+
+.item h5{
+    padding: 10px 15px;
+    text-align: left;
+    font-weight: 300;
+    color: white;
+    text-transform: none;
+    font-size: 14px;
+    /*border: 1px solid white;*/
+}
+
+.item p{
+    color: #51d2ff;
+    font-size: 12px;
+    font-weight: 400;
+    text-align: left;
+    padding: 2px 12px;
+    text-transform: capitalize;
+    /*border: 1px solid white;*/
+    line-height: 15px;
+}
+
+
 /*.isotope-overlay*/
 .isotope-overlay{
 
     position:absolute;
     height:200px;
     width:300px;
-    background:rgba(31,44,108,.5);
+    background:rgba(31,44,108,.7);
     display:flex;
     align-items:center;
     text-transform: uppercase;
@@ -729,8 +768,8 @@ span.single-timeline-horizontal {
     color: #fff;
     font-size: 18px;
     text-align: center;
-    text-transform: uppercase;
-    /*background-color: rgba(31,44,108,0.01);
+    /*text-transform: uppercase;
+    background-color: rgba(31,44,108,0.01);
     border-color: rgba(31,44,108,0.01);
 
     text-transform: capitalize;
