--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -53,7 +53,7 @@ i{
 }
 
 .describe{
-	padding-top: 130px;
+	padding-top: 30px;
 	margin-left: 200px;
 	margin-right: 180px;
 }
@@ -77,7 +77,8 @@ i{
 .describe h3{
 	text-align: left;
 	margin-left: -20px;
-	font-size: 22px;
+	font-size: 21px;
+	margin-top: -20px;
 
 }
 
@@ -90,3 +91,7 @@ i{
 	float: right;
 	margin-right: 150px;
 }
+
+
+.pmax{width:80%;height:auto; cursor: pointer;}
+.pmin{width:200px;height:auto; cursor: pointer;}
