--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -148,8 +148,8 @@ a:hover{
 --------------------------------------*/
 
 .describe{
-	padding-top: 30px;
-	margin-left: 15vw;
+	padding-top: 10vh;
+	margin-left: 11vw;
 	margin-right: 10vw;
 }
 
@@ -160,22 +160,31 @@ a:hover{
 
 .describe h2{
 	margin-bottom: 20px;
-	font-size: 24px;
-}
-
-.describe p{
-	text-align: left;
-	font-size: 17px;
-	margin-bottom: 15px;
+	font-size: 23px;
+	color: #5884C6;
 }
 
 .describe h3{
 	text-align: left;
 	margin-left: -20px;
-	font-size: 21px;
+	font-size: 18px;
 	margin-top: -20px;
+	color: #5884C6;
 
 }
+
+.describe p{
+	text-align: left;
+	font-size: 14px;
+	margin-bottom: 15px;
+}
+
+.describe li{
+	color:#43485c;
+	font-size:14px;
+	font-family: 'Poppins', sans-serif;
+}
+
 
 /*-------------------------------------
         Other Page Button
