adjust the layout

--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -76,7 +76,7 @@ img {
 }
 
 
-.highlight .row {
+.highlight > .row-summary {
 	display: flex;
 	align-items: center;
 }
@@ -89,7 +89,7 @@ img {
 }
 
 @media screen and (max-width:1200px) {
-	.highlight .row {
+	.highlight > .row-summary {
 		display: block;
 	}
 }
