--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -206,7 +206,7 @@ a:hover{
 .describe .row {
 	display: flex;
 	align-items: center;
-	text-align: center;
+	/*text-align: center;*/
 	margin-right: 5vw; 
 	
 }
@@ -215,6 +215,97 @@ a:hover{
 	.describe .row {
 		display: block;
 	}
+}
+
+.topic {
+	text-align: center;
+}
+
+.step {
+	max-height: 130px;
+}
+
+/*-------------------------------------
+        Slideshow / Carousel
+--------------------------------------*/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides, .mySlides2 {
+  display: none;
+}
+
+
+/* Next & previous buttons */
+.prev, .next {
+  background-color: rgba(0,0,0,0.3);
+  cursor: pointer;
+  position: absolute;
+  top: 45%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+  padding: 16px !important;
+}
+
+/* Caption text */
+.text {
+  color: #333;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: -20px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #888;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot, .dot2 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.slide_active, .dot:hover {
+  background-color: #717171;
 }
 
 
