--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -225,6 +225,16 @@ a:hover{
 	max-height: 130px;
 }
 
+.step_topic {
+	text-align: center;
+	display: flex;
+	align-items: flex-start !important;
+}
+
+.step_topic p {
+	text-align: center;
+}
+
 /*-------------------------------------
         Slideshow / Carousel
 --------------------------------------*/
@@ -286,8 +296,8 @@ a:hover{
 /* Number text (1/3 etc) */
 .numbertext {
   color: #888;
-  font-size: 12px;
-  padding: 8px 12px;
+  font-size: 14px;
+  padding: 1px 12px;
   position: absolute;
   top: 0;
 }
