--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -258,7 +258,7 @@ a:hover{
   background-color: rgba(0,0,0,0.3);
   cursor: pointer;
   position: absolute;
-  top: 45%;
+  top: 35%;
   width: auto;
   margin-top: -22px;
   padding: 16px;
@@ -285,9 +285,9 @@ a:hover{
 /* Caption text */
 .text {
   color: #333;
-  font-size: 15px;
+  font-size: 1.3rem;
   padding: 8px 12px;
-  position: absolute;
+  /*position: absolute;*/
   bottom: -20px;
   width: 100%;
   text-align: center;
@@ -296,7 +296,7 @@ a:hover{
 /* Number text (1/3 etc) */
 .numbertext {
   color: #888;
-  font-size: 14px;
+  font-size: 1.2rem;
   padding: 1px 12px;
   position: absolute;
   top: 0;
