--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -71,7 +71,7 @@ img {
     font-size: 26px;
     font-weight: 600;
     text-transform: uppercase;
-    margin-left: 5vw;
+    /*margin-left: 5vw;*/
     margin-right: 2vw;
     margin-top: 5vh;
     margin-bottom: 3vh;
@@ -183,9 +183,9 @@ a:hover{
 --------------------------------------*/
 
 .describe{
-	padding-top: 10vh;
-	margin-left: 11vw;
-	margin-right: 10vw;
+	padding-top: 4vh;
+	padding-left: 11vw;
+	padding-right: 10vw;
 }
 
 .describe > h2,img{
@@ -199,9 +199,9 @@ a:hover{
     font-size: 26px;
     font-weight: 600;
     text-transform: uppercase;
-    margin-left: 5vw;
+    margin-left: 1vw;
     margin-right: 2vw;
-    /*margin-top: 5vh;*/
+    margin-top: 5vh;
     margin-bottom: 8vh;
 }
 
@@ -213,12 +213,12 @@ a:hover{
 	color: #5884C6;
 
 }
-
+/*
 .describe p{
 	text-align: left;
 	font-size: 14px;
 	margin-bottom: 15px;
-}
+}*/
 
 .describe li{
 	color:#43485c;
@@ -256,6 +256,26 @@ a:hover{
 
 .step_topic p {
 	text-align: center;
+}
+
+#Challenge {
+	text-align: center;
+	padding-bottom: 5vw;
+	background-color: rgba(233, 233, 236, 0.5);
+}
+
+#Challenge p {
+	/*font-family: 'Helvetica';*/
+	color: #555562;
+	font-size: 1.8rem;
+	margin: 1vh 10vw 5vh 10vw;
+	font-weight: 500;
+}
+
+#Challenge span {
+	color: #f15025;
+	font-size: 2.1rem;
+	font-weight: 600;
 }
 
 /*-------------------------------------
