--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -24,6 +24,11 @@ img {
 	margin-bottom: 3vh;
 }
 
+iframe {
+	margin: 0 auto;
+	display:block;
+}
+
 /*-------------------------------------
         Portfolio page styles
 --------------------------------------*/
@@ -253,7 +258,7 @@ a:hover{
 }
 
 .step {
-	max-height: 130px;
+	/*max-height: 130px;*/
 }
 
 .step_topic {
@@ -286,6 +291,30 @@ a:hover{
 	font-weight: 600;
 }
 
+
+.key {
+	width: 100vw;
+	margin-left: -11vw;
+	padding-left: 11vw;
+	padding-right: -10vw;
+	padding-bottom: 5vh;
+	background-color: #dcedff;
+}
+
+.key h4 {
+	margin-left: -80px;
+	color: black;
+	text-align: center;
+	padding-top: 5vh;
+	padding-bottom: 5vh;
+	font-weight: 600;
+	font-size: 2.2rem;
+}
+
+.key h5 {
+	margin-top: -1vh;
+}
+
 /*-------------------------------------
         Slideshow / Carousel
 --------------------------------------*/
@@ -301,6 +330,18 @@ a:hover{
 /* Hide the images by default */
 .mySlides, .mySlides2 {
   display: none;
+}
+
+.mySlides img {
+	/*width:100%; */
+	height: 180px;
+}
+
+@media screen and (max-width:1200px){
+	.mySlides img {
+		/*width:100%; */
+		height: 150px;
+	}
 }
 
 
@@ -319,6 +360,10 @@ a:hover{
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+}
+
+.prev {
+	left: 0;
 }
 
 /* Position the "next button" to the right */
