--- a/css/portfolioPage.css
+++ b/css/portfolioPage.css
@@ -1,5 +1,11 @@
 html {
-	font-size: 12px;
+	font-size: 12.4px;
+}
+
+@media screen and (max-width:992px) {
+	html {
+		font-size: 12px;
+	}
 }
 
 @media screen and (max-width:768px) {
