--- a/portfolio/u07_smarthome/u07_smarthome.css
+++ b/portfolio/u07_smarthome/u07_smarthome.css
@@ -453,6 +453,29 @@ a:hover{
   background-color: #717171;
 }
 
+/*-------------------------------------
+        Responsive Video
+--------------------------------------*/
+
+.videoWrapper {
+	max-height: 350px;
+	max-width: 900px;
+	text-align: center;
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+.videoWrapper iframe {
+	text-align: center;
+	
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /*-------------------------------------
         Other Page Button
