--- a/portfolio/u12_Cinameet/u12_cinemeet.css
+++ b/portfolio/u12_Cinameet/u12_cinemeet.css
@@ -229,7 +229,7 @@ a:hover{
     font-size: 2.2rem;
     font-weight: 600;
     text-transform: capitalize;
-    margin-left: 3vw;
+    /*margin-left: 3vw;*/
     margin-top: 5vh;
     margin-bottom: 8vh;
 }
