--- a/portfolio/u11_GroupIn/u11_GroupIn.css
+++ b/portfolio/u11_GroupIn/u11_GroupIn.css
@@ -60,7 +60,7 @@ iframe {
         Header
 --------------------------------------*/
 .section-heading h2 {
-	color: #2B5F98;
+	color: #F4976C;
     font-size: 2.5rem;
     font-weight: 700;
     text-transform: capitalize;
@@ -81,7 +81,7 @@ iframe {
 	margin-top: 5px;
 	margin-bottom: 10px;
 	font-size: 1.3rem;
-	color: #DEAE97;
+	color: #b4c5e9;
 }
 
 /*-------------------------------------
@@ -90,7 +90,7 @@ iframe {
 
 .heading h3 {
 	text-align: center;
-	color: #2B5F98;
+	color: #F4976C;
     font-size: 2.2rem;
     font-weight: 600;
     text-transform: capitalize;
@@ -135,7 +135,7 @@ iframe {
 	margin-top: 3vh;
 	text-align: left;
 	font-size: 1.8rem;
-	color: #2B5F98;
+	color: #F4976C;
 	font-family: 'Playfair Display', serif;
 }
 
@@ -164,17 +164,17 @@ iframe {
 --------------------------------------*/
 
 a:hover{
-	color: #2B5F98;
+	color: #F4976C;
 }
 
 .active > a{
 	padding-left: 2px;
-	color: #2B5F98;
+	color: #F4976C;
 }
 
 .active > a::before {
   content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: #2B5F98; /* Change the color */
+  color: #F4976C; /* Change the color */
   font-weight: bold; /* If you want it to be bold */
   display: inline-block; /* Needed to add space between the bullet and the text */
   width: 1em; /* Also needed for space (tweak if needed) */
@@ -224,7 +224,7 @@ a:hover{
 
 .contentPart h2{
 	text-align: center;
-	color: #2B5F98;
+	color: #F4976C;
 	font-family: 'Playfair Display', serif;
     font-size: 2.2rem;
     font-weight: 600;
@@ -241,7 +241,7 @@ a:hover{
 	font-size: 2rem;
 	margin-top: 5vh;
     /*margin-bottom: 2vh;*/
-	color: #2B5F98;
+	color: #F4976C;
 	font-family: 'Playfair Display', serif;
 }
 
@@ -325,7 +325,7 @@ a:hover{
 }
 
 #Challenge span {
-	color: #DEAE97;
+	color: #b4c5e9;
 	font-size: 1.7rem;
 	font-weight: 600;
 }
@@ -337,7 +337,7 @@ a:hover{
 	padding-left: 11vw;
 	padding-right: -10vw;
 	padding-bottom: 5vh;
-	background-color: #dcedff;
+	background-color: #f5e0db;
 }
 
 .key h4 {
