--- a/portfolio/u11_GroupIn/u11_GroupIn.css
+++ b/portfolio/u11_GroupIn/u11_GroupIn.css
@@ -531,8 +531,9 @@ a:hover{
 .modal-content {
   margin: auto;
   display: block;
-  width: 80%;
-  max-width: 700px;
+  /*width: 80%;*/
+  max-width: 1000px;
+  max-height: 1000px;
 }
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
